added stripe server

--- a/node/stripe/frontend-test/index.html
+++ b/node/stripe/frontend-test/index.html
@@ -17,7 +17,7 @@
   <button id="checkout-button">Buy Now</button>
 
   <script>
-    const stripe = Stripe("pk_test_YoMAMA");
+    const stripe = Stripe("pk_test_51QfRhXF0pXjohmvsfBeqTp7K69f8RHS5j1hyceqsQ8qvOUBBZatwuOPqMEHCyE4OSGSW9jZhzDKdqxBiUPrkQRuw00fFIZhana");
 
     // Fetch product details
     async function fetchProductDetails() {
